# glas-mail-sender

./: .gitignore  AGENTS.md  docker-compose.yml
app/: .env  pyproject.toml
app/docs/: spec.md
app/frontend/: package.json
app/frontend/src/: App.vue
app/mails/: .gitignore
app/mails/addresses/: mails-budget-and-finance-commission.csv  mails-ministry-of-finance-minister-council.csv  mails-mp.csv  mails-worker-organizations.csv
app/mails/templates/: template-business-organizations-employers.txt  template-council-of-ministers-ministry-of-finance.txt  template-national-assembly-all-parliamentary-groups.txt
app/src/: main.py  seed.py
app/src/app/: database.py  models.py  schemas.py
app/src/app/mailer/: mailer.py  prepare.py
app/src/app/mailing/: mailer.py  observer.py
app/src/docs/: spec.md
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: endpoints.py  models.py
backend/app/core/: config.py  security.py
backend/app/services/: authenticator.py  entity_maintainer.py  mail_service.py  pb_service.py  template_manager.py
docs/: spec.md
docs/technical/: backend.md  frontend.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts  mailService.ts
frontend/src/components/feedback/: ErrorMessage.vue  SuccessState.vue
frontend/src/components/form/: LetterReview.vue  SenderForm.vue  VerificationForm.vue
frontend/src/components/layout/: AppFooter.vue  AppHeader.vue
frontend/src/composables/: useMailForm.ts
frontend/src/types/: mail.ts
pb_schema/: README.md
