[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Terziev",email = "hephaestus.preaching118@passmail.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mailtrap (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
