[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Terziev",email = "hephaestus.preaching118@passmail.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mailtrap (>=2.3.0,<3.0.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
