[tool.poetry]
name = "glas-mail-sender-backend"
version = "0.1.0"
description = ""
authors = ["Ivan Terziev <iv.p.terziev@proton.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pocketbase = "^0.15.0"
aiosmtplib = "^3.0.0"
pydantic-settings = "^2.0.0"
python-multipart = "^0.0.12"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^43.0.0"
pydantic = {extras = ["email"], version = "^2.12.5"}

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
